@@ -160,6 +160,7 @@ DEB_HOST_ARCH		:= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_GNU_TYPE	:= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_HOST_MULTIARCH	:= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
+gcc47_archs = powerpcspe
 #gcc48_archs = alpha amd64 armel armhf hppa i386 ia64 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64 kfreebsd-amd64 kfreebsd-i386 hurd-i386
 gcc48_archs = amd64 armel armhf arm64 hppa i386 m68k mips mipsel ppc64el x32 kfreebsd-amd64 kfreebsd-i386 hurd-i386 s390x sparc64
 gcj48_archs = alpha amd64 armel armhf arm64 hppa i386 ia64 m68k mips mipsel powerpc powerpcspe ppc64 ppc64el s390 s390x sh4 sparc sparc64 x32 kfreebsd-amd64 kfreebsd-i386 hurd-i386
@@ -185,6 +186,13 @@ ifneq (,$(filter $(DEB_HOST_ARCH), $(gcc48_archs)))
   CV_GOBJC		:= 4.8.2-$(REL_NO_482)
   CV_GOBJCXX		:= 4.8.2-$(REL_NO_482)
   CV_GFORT		:= 4.8.2-$(REL_NO_482)
+else ifneq (,$(filter $(DEB_HOST_ARCH), $(gcc47_archs)))
+  CV_CPP		:= 4.7.3-$(REL_NO_473)
+  CV_GCC		:= 4.7.3-$(REL_NO_473)
+  CV_GPP		:= 4.7.3-$(REL_NO_473)
+  CV_GOBJC		:= 4.7.3-$(REL_NO_473)
+  CV_GOBJCXX		:= 4.7.3-$(REL_NO_473)
+  CV_GFORT		:= 4.7.3-$(REL_NO_473)
 endif
 
 ifneq (,$(filter $(DEB_HOST_ARCH), $(gcj48_archs)))
@@ -211,6 +219,13 @@ ifneq (,$(filter $(DEB_HOST_ARCH),$(gcc48_archs)))
   REQV_GOBJC	= $(REQV_48)
   REQV_GOBJCXX	= $(REQV_48)
   REQV_GFORT	= $(REQV_48)
+else ifneq (,$(filter $(DEB_HOST_ARCH),$(gcc47_archs)))
+  REQV_CPP	= $(REQV_47)
+  REQV_GCC	= $(REQV_47)
+  REQV_GPP	= $(REQV_47)
+  REQV_GOBJC	= $(REQV_47)
+  REQV_GOBJCXX	= $(REQV_47)
+  REQV_GFORT	= $(REQV_47)
 endif
 
 ifneq (,$(filter $(DEB_HOST_ARCH),$(gcj48_archs)))
